--- a/WPF/Tablet/TabletStyles.xaml
+++ b/WPF/Tablet/TabletStyles.xaml
@@ -55,6 +55,11 @@
         <Setter Property="FontWeight" Value="Bold"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
     </Style>
+    <Style x:Key="MainPageLabel" TargetType="Label">
+        <Setter Property="FontSize" Value="14"/>
+        <Setter Property="FontWeight" Value="Bold"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
+    </Style>
     <Style x:Key="BasicButton" TargetType="Button">
         <Setter Property="HorizontalAlignment" Value="Center"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
@@ -108,6 +113,13 @@
         <Setter Property="Margin" Value="5,20,0,5"/>
         <Setter Property="Padding" Value="0"/>
         <Setter Property="Width" Value="200"/>
+    </Style>
+    <Style x:Key="MainPageButton" TargetType="Button" BasedOn="{StaticResource BasicButton}">
+        <Setter Property="HorizontalAlignment" Value="Right"/>
+        <Setter Property="VerticalAlignment" Value="top"/>
+        <Setter Property="Margin" Value="0,5,20,5"/>
+        <Setter Property="Padding" Value="3,0,3,0"/>
+        <Setter Property="Width" Value="90"/>
     </Style>
     <Style x:Key="FilterButton" TargetType="Button" BasedOn="{StaticResource BasicButton}">
         <Setter Property="FontSize" Value="20"/>
