--- a/WPF/Tablet/Views/ProfilePage.xaml
+++ b/WPF/Tablet/Views/ProfilePage.xaml
@@ -24,6 +24,7 @@
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -76,6 +77,7 @@
         <TextBlock Grid.Row="1" Grid.Column="2" Margin="5" Text="{Binding guideProfileDTO.Score}" FontSize="22"/>
         <TextBlock Grid.Row="0" Grid.Column="1" Margin="5" Text="{Binding guideProfileDTO.Name}" FontSize="22"/>
         <TextBlock Grid.Row="1" Grid.Column="1" Margin="5" Text="{Binding guideProfileDTO.Surname}" FontSize="22"/>
+        <TextBlock Grid.Row="1" Grid.Column="3" Margin="5" Text="{Binding guideProfileDTO.LanguageTemplate}" FontSize="22"/>
         <Button Grid.Row="2" Grid.Column="1" Style="{StaticResource BigButtons}" Content="Logout" VerticalAlignment="Bottom" Margin="5 5 5 25" Command="cmd:RoutedCommands.Clear"/>
         <Button Grid.Row="2" Grid.Column="0" Style="{StaticResource BigButtons}" Content="Close" VerticalAlignment="Bottom" Margin="5 5 5 25" Command="cmd:RoutedCommands.Cancel"/>
         <Button Grid.Row="2" Grid.Column="2" Command="cmd:RoutedCommands.Confirm">
