--- a/WPF/Android/Views/AccommodationStatisticsPage.xaml
+++ b/WPF/Android/Views/AccommodationStatisticsPage.xaml
@@ -15,7 +15,6 @@
                 <Setter Property="FontFamily" Value="Global Sans Serif"/>
                 <Setter Property="BorderBrush" Value="{StaticResource Beige}"/>
                 <Setter Property="BorderThickness" Value="0,0,0,2"/>
-                <Setter Property="Foreground" Value="{StaticResource Beige}"/>
             </Style.Setters>
         </Style>
 
@@ -41,7 +40,7 @@
         </Grid.RowDefinitions>
         <Border BorderBrush="Black" BorderThickness="0,0,0,2">
             <Label Content="{Binding AccommodationDTO.Name}" Style="{StaticResource Header1}" BorderBrush="Transparent"
-                   VerticalAlignment="Center" HorizontalAlignment="Center" Background="{StaticResource Green}"/>
+                   VerticalAlignment="Center" HorizontalAlignment="Center"/>
         </Border>
 
         <TabControl Grid.Row="1" Height="550" Width="400">
