--- a/WPF/Android/Views/RescheduleRequestDeclineWindow.xaml
+++ b/WPF/Android/Views/RescheduleRequestDeclineWindow.xaml
@@ -35,8 +35,6 @@
                 <Setter Property="FontFamily" Value="Global Sans Serif"/>
                 <Setter Property="BorderBrush" Value="{StaticResource Beige}"/>
                 <Setter Property="BorderThickness" Value="0,0,0,2"/>
-                <Setter Property="Background" Value="{StaticResource Green}"/>
-                <Setter Property="Foreground" Value="{StaticResource Beige}"/>
             </Style.Setters>
         </Style>
 
@@ -65,7 +63,7 @@
             <RowDefinition Height="60"/>
         </Grid.RowDefinitions>
         <Label Content="Additional info:" HorizontalAlignment="Center" VerticalAlignment="Center"  FontFamily="Global Sans Serif" FontSize="22"
-             Style="{StaticResource Header}" Padding="5,5,5,0" Background="{StaticResource Green}"/>
+             Style="{StaticResource Header}" Padding="5,5,5,0"/>
         <Border Height="140" Grid.Row="1" Width="250" BorderBrush="Black" BorderThickness="1" VerticalAlignment="Top" Margin="0,10,0,0"  HorizontalAlignment="Center">
             <TextBox Text="{Binding RescheduleRequestDTO.OwnerComment}" Margin="0" Background="Transparent"/>
         </Border>
