--- a/WPF/Android/Views/SideMenuPage.xaml
+++ b/WPF/Android/Views/SideMenuPage.xaml
@@ -9,11 +9,24 @@
       Title="SideMenuPage">
 
     <Page.Resources>
-        <BitmapImage x:Key="RenovationIcon" UriSource="../../../Resources/Images/renovation-icon.png"/>
+        <Style x:Key="TextBlockBeige" TargetType="TextBlock">
+            <Setter Property="Foreground" Value="{StaticResource Beige}"/>
+            <Setter Property="FontSize" Value="16"/>
+            <Setter Property="FontFamily" Value="Global sans serif"/>
+        </Style>
+
+        <Style x:Key="LabelBeige" TargetType="Label">
+            <Setter Property="Foreground" Value="{StaticResource Beige}"/>
+            <Setter Property="FontSize" Value="16"/>
+            <Setter Property="FontFamily" Value="Global sans serif"/>
+        </Style>
+
+        <BitmapImage x:Key="RenovationIcon" UriSource="../../../Resources/Images/Icons/renovation-icon-beige.png"/>
         <BitmapImage x:Key="InboxIcon" UriSource="../../../Resources/Images/Icons/android-inbox-icon.png"/>
         <BitmapImage x:Key="HouseIcon" UriSource="../../../Resources/Images/Icons/android-house-icon.png"/>
         <BitmapImage x:Key="LogoutIcon" UriSource="../../../Resources/Images/Icons/android-logout-icon.png"/>
         <BitmapImage x:Key="ForumsIcon" UriSource="../../../Resources/Images/Icons/forums-icon.png"/>
+        <BitmapImage x:Key="CalendarBeigeIcon" UriSource="../../../Resources/Images/Icons/reservations-beige-icon.png"/>
     </Page.Resources>
 
             <Grid Background="{StaticResource SoftGreen}">
@@ -34,8 +47,8 @@
                         <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
                             <Image Source="{StaticResource HouseIcon}"  Height="40" Width="40" Margin="10,0,0,0"/>
                             <StackPanel Orientation="Vertical" VerticalAlignment="Center" Margin="10,0,0,0">
-                                <TextBlock Text="Accommodations" FontSize="16" HorizontalAlignment="Center" FontFamily="Global Sans Serif"/>
-                                <TextBlock Text="and Statistics" FontSize="16" FontFamily="Global Sans Serif"/>
+                                <TextBlock Text="Accommodations"  HorizontalAlignment="Center" Style="{StaticResource TextBlockBeige}"/>
+                                <TextBlock Text="and Statistics" FontSize="16" FontFamily="Global Sans Serif" Style="{StaticResource TextBlockBeige}"/>
                             </StackPanel>
                         </StackPanel>
                     </Border>
@@ -49,8 +62,8 @@
                     <Border BorderBrush="Black" BorderThickness="2,2,2,0" Background="{TemplateBinding Background}">
                         <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
                             <Image Source="{StaticResource InboxIcon}"  Height="40" Width="40" Margin="10,0,0,0"/>
-                            <TextBlock Text="Inbox" FontSize="16" Margin="10,0,0,0" VerticalAlignment="Center" FontFamily="Global Sans Serif"/>
-                            <TextBlock Text="{Binding MessagesNumLabel}" FontSize="16" Margin="5,0,0,0" VerticalAlignment="Center" FontFamily="Global Sans Serif"/>
+                            <TextBlock Text="Inbox"  Margin="10,0,0,0" VerticalAlignment="Center" Style="{StaticResource TextBlockBeige}"/>
+                            <TextBlock Text="{Binding MessagesNumLabel}"  Margin="5,0,0,0" VerticalAlignment="Center" Style="{StaticResource TextBlockBeige}"/>
                         </StackPanel>
                     </Border>
                 </ControlTemplate>
@@ -62,8 +75,8 @@
                 <ControlTemplate TargetType="Button">
                     <Border BorderBrush="Black" BorderThickness="2,2,2,0" Background="{TemplateBinding Background}">
                         <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
-                            <Image Source="{StaticResource CalendarIcon}"  Height="40" Width="40" Margin="10,0,0,0"/>
-                            <TextBlock Text="Reservations" FontSize="16" Margin="10,0,0,0" VerticalAlignment="Center" FontFamily="Global Sans Serif"/>
+                            <Image Source="{StaticResource CalendarBeigeIcon}"  Height="40" Width="40" Margin="10,0,0,0"/>
+                            <TextBlock Text="Reservations" Margin="10,0,0,0" VerticalAlignment="Center" Style="{StaticResource TextBlockBeige}"/>
                         </StackPanel>
                     </Border>
                 </ControlTemplate>
@@ -76,7 +89,7 @@
                     <Border BorderBrush="Black" BorderThickness="2,2,2,0" Background="{TemplateBinding Background}">
                         <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
                             <Image Source="{StaticResource RenovationIcon}"  Height="40" Width="40" Margin="10,0,0,0"/>
-                            <TextBlock Text="Renovations" FontSize="16" Margin="10,0,0,0" VerticalAlignment="Center" FontFamily="Global Sans Serif"/>
+                            <TextBlock Text="Renovations" Style="{StaticResource TextBlockBeige}" Margin="10,0,0,0" VerticalAlignment="Center"/>
                         </StackPanel>
                     </Border>
                 </ControlTemplate>
@@ -89,7 +102,7 @@
                     <Border BorderBrush="Black" BorderThickness="2,2,2,2" Background="{TemplateBinding Background}">
                         <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
                             <Image Source="{StaticResource ForumsIcon}"  Height="40" Width="40" Margin="10,0,0,0"/>
-                            <TextBlock Text="Forums" FontSize="16" Margin="10,0,0,0" VerticalAlignment="Center" FontFamily="Global Sans Serif"/>
+                            <TextBlock Text="Forums" Margin="10,0,0,0" VerticalAlignment="Center" Style="{StaticResource TextBlockBeige}"/>
                         </StackPanel>
                     </Border>
                 </ControlTemplate>
@@ -108,14 +121,15 @@
                     <RowDefinition Height="*"/>
                     <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
-                <Image Height="40" Width="40" Grid.Column="0" Grid.Row="0" Grid.RowSpan="2" Source="../../../Resources/Images/owner-icon.png" Margin="-5,0,0,0"/>
+                <Image Height="40" Width="40" Grid.Column="0" Grid.Row="0" Grid.RowSpan="2" Source="../../../Resources/Images/Icons/owner-icon.png" Margin="-5,0,0,0"/>
                 <Label x:Name="UsernameLabel" HorizontalAlignment="Left" Grid.Column="1" Grid.Row="0" Grid.ColumnSpan="2"
-                       FontSize="16" FontWeight="Bold" VerticalAlignment="Top" Padding="0" FontFamily="Global Sans Serif"/>
-                <Label Grid.Column="1" Grid.Row="1" FontSize="16" VerticalAlignment="Top"
-                       HorizontalAlignment="Left" Content="Average Grade:" Height="25" Padding="0" FontFamily="Global Sans Serif"/>
+                       FontWeight="Bold" VerticalAlignment="Top" Padding="0" Style="{StaticResource LabelBeige}"/>
+                <Label Grid.Column="1" Grid.Row="1" VerticalAlignment="Top"
+                       HorizontalAlignment="Left" Content="Average Grade:" Height="25" Padding="0" Style="{StaticResource LabelBeige}"/>
 
                 <Image x:Name="SuperImage" Grid.Column="0" Grid.Row="0" VerticalAlignment="Top" HorizontalAlignment="Right" Height="20" Width="20" Margin="0,0,5,0"/>
-                <Label x:Name="AverageGradeLabel"  Grid.Column="2" Grid.Row="2" FontSize="16" VerticalAlignment="Top" HorizontalAlignment="Left" Height="25" FontFamily="Global Sans Serif" Padding="0"/>
+                <Label x:Name="AverageGradeLabel"  Grid.Column="2" Grid.Row="2" VerticalAlignment="Top" HorizontalAlignment="Left" Height="25" Padding="0"
+                       Style="{StaticResource LabelBeige}"/>
 
             </Grid>
         </Border>
@@ -126,7 +140,7 @@
                     <Border BorderBrush="Black" BorderThickness="2,2,2,2" Background="{TemplateBinding Background}">
                         <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
                             <Image Source="{StaticResource LogoutIcon}"  Height="40" Width="40" Margin="10,0,0,0"/>
-                            <TextBlock Text="Log out" FontSize="16" Margin="10,0,0,0" VerticalAlignment="Center" FontFamily="Global Sans Serif"/>
+                            <TextBlock Text="Log out" Margin="10,0,0,0" VerticalAlignment="Center" Style="{StaticResource TextBlockBeige}"/>
                         </StackPanel>
                     </Border>
                 </ControlTemplate>
