--- a/WPF/Tablet/TabletStyles.xaml
+++ b/WPF/Tablet/TabletStyles.xaml
@@ -126,5 +126,10 @@
         <Setter Property="Margin" Value="10"/>
         <Setter Property="Padding" Value="5"/>
     </Style>
-    
+    <Style x:Key="GroupBoxStyle" TargetType="GroupBox">
+        <Setter Property="Control.BorderBrush" Value="Black"/>
+        <Setter Property="Control.BorderThickness" Value="0.5"/>
+        <Setter Property="Control.Margin" Value="5"/>
+    </Style>
+
 </ResourceDictionary>
