--- a/App.xaml
+++ b/App.xaml
@@ -59,7 +59,10 @@
         <BitmapImage x:Key="FilterIconBeige" UriSource="Resources/Images/Icons/filter-icon-beige.png"/>
         <BitmapImage x:Key="SendIconBeige" UriSource="Resources/Images/Icons/send-icon-beige.png"/>
         <BitmapImage x:Key="HelpIcon" UriSource="/Resources/Images/help.png"/>
-            
+        <BitmapImage x:Key="AddNewIcon" UriSource="Resources/Images/Icons/add-new-icon.png"/>
+        <BitmapImage x:Key="CommentIcon" UriSource="Resources/Images/Icons/comment-icon.png"/>
+        <BitmapImage x:Key="UserIcon" UriSource="Resources/Images/Icons/user-icon.png"/>
+
         <SolidColorBrush x:Key="HardGreen" Color="#12372A"/>
         <SolidColorBrush x:Key="Green" Color="#436850"/>
         <SolidColorBrush x:Key="Green2" Color="#5a8c6a"/>
