--- a/WPF/Web/Views/GuestMainWindow.xaml
+++ b/WPF/Web/Views/GuestMainWindow.xaml
@@ -138,7 +138,7 @@
                     </WrapPanel>
                 </Button>
 
-                <Button Name="buttonForum" Style="{StaticResource PrimaryButton}">
+                <Button Name="buttonForum" Style="{StaticResource PrimaryButton}" Click="ButtonForumsClick">
                     <WrapPanel>
                         <Image Style="{StaticResource ButtonImage}" Source="{StaticResource ChatWhiteIcon}"/>
                         <TextBlock Text="Forums" Style="{StaticResource ButtonText}"/>
