--- a/WPF/Web/Views/ReviewAccommodationModalDialog.xaml
+++ b/WPF/Web/Views/ReviewAccommodationModalDialog.xaml
@@ -129,7 +129,7 @@
 
                         <StackPanel Margin="0 10 0 0" Orientation="Horizontal" IsEnabled="{Binding ElementName=checkBoxRequiresRenovation, Path=IsChecked}">
                             <Label Content="Renovation importance" Style="{StaticResource LabelStyle}"/>
-                            <ComboBox x:Name="comboBoxRenovationImportance" SelectedIndex="0" Width="200" Margin="10 0 0 0"
+                            <ComboBox x:Name="comboBoxRenovationImportance" SelectedIndex="0" Width="200" Margin="10 0 0 0" Cursor="Hand"
                                       ItemsSource="{Binding ImportanceTypes}"
                                       SelectedValue="{Binding Review.Importance, Mode=OneWayToSource}"
                                       ItemTemplate="{StaticResource ComboBoxItemTemplate}"/>
